Additional Dark Mode fixes for extension prefs page (part of issue #43)

--- a/wx-src/pages/options.css
+++ b/wx-src/pages/options.css
@@ -52,7 +52,7 @@ main {
     width: 640px;
     margin: 24px auto 24px auto;
     padding: 16px;
-    border: 1px solid #ddd;
+    border: 1px solid var(--color-main-border);
     border-radius: 2px;
     box-shadow: 0 0 8px 2px var(--color-main-border-shadow);
     background-color: var(--color-main-bkgd);
@@ -319,7 +319,7 @@ input[type="file"] {
 }
 
 #about-btn:hover {
-    border: 1px solid var(--color-about-btn-border-hover);
+    border-color: var(--color-btn-hover-border);
     background-color: var(--color-about-btn-bkgd-hover);
 }
 
@@ -464,6 +464,7 @@ input[type="file"] {
     margin-top: 10px;
     margin-bottom: 10px;
     border-top: 1px solid var(--color-dlg-fieldset-border);
+    border-bottom: 1px solid var(--color-dlg-fieldset-border);
     color: #b1b1b3;
 }
 
